3D manipulators unselectable while “Lock to Cursor” is turned on #53850

Closed
opened 2018-01-21 20:45:46 +01:00 by Fabien · 9 comments

System Information
Windows 10
GTX 960

Blender Version
Broken: 2.79
Worked: 2.78

Short description of error
3D manipulators are unselectable while “Lock to Cursor” is turned on

Exact steps for others to reproduce the error

  • Open blender 2. 79 and load any file (startup file included). The rendering engine doesn't matter.
  • In 3D view, open Navigation Tab, and check "lock to cursor".
  • Try moving an object with 3D manipulators (this should be impossible as you can't select 3D manipulators).
  • Uncheck "Lock to Cursor" and try moving an object with 3D manipulators (this should be fine).

See also :
https://blender.stackexchange.com/questions/90438/3d-manipulators-unselectable-while-lock-to-cursor-is-turned-on

**System Information** Windows 10 GTX 960 **Blender Version** Broken: 2.79 Worked: 2.78 **Short description of error** 3D manipulators are unselectable while “Lock to Cursor” is turned on **Exact steps for others to reproduce the error** - Open blender 2. 79 and load any file (startup file included). The rendering engine doesn't matter. - In 3D view, open Navigation Tab, and check "lock to cursor". - Try moving an object with 3D manipulators (this should be impossible as you can't select 3D manipulators). - Uncheck "Lock to Cursor" and try moving an object with 3D manipulators (this should be fine). See also : https://blender.stackexchange.com/questions/90438/3d-manipulators-unselectable-while-lock-to-cursor-is-turned-on
Author

Added subscriber: @Fabien-Marello

Added subscriber: @Fabien-Marello

#53941 was marked as duplicate of this issue

#53941 was marked as duplicate of this issue

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Found the cause, looking into a fix.

Found the cause, looking into a fix.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by fb4582134a

This issue was referenced by fb4582134ae1ebedc68f3c4a4bf2f196503e142c
Author

Thanks for your help
How can I apply the fix? Can I simply copy and paste fixed files?

Thanks for your help How can I apply the fix? Can I simply copy and paste fixed files?

Fabien, you need to recompile blender - best build blender-v2.79a-release, this will be the official stable release soon.

Fabien, you need to recompile blender - best build `blender-v2.79a-release`, this will be the official stable release soon.

Added subscriber: @GimpyWalker

Added subscriber: @GimpyWalker
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53850
No description provided.