Fix T53850: Lock to Cursor breaks 3D manipulators